# sql_anonymizer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
resources/grafana/: dashboard.yml
src/: anonymize.rs  build.rs  cli.rs  elastic.rs  main.rs  parser.rs  summary.rs
