[package]
name = "sql_normalizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.38.0"
log = { version = "0.4.20", features = [] }
env_logger = "0.10.0"
clap = { version = "4.4.4", features = ["derive","env"] }
uuid = {version = "1.4.1", features = [ "v4", "serde" ]}
chrono = {version = "0.4.31", features = [  "serde" ]}
fs-tail = "0.1.4"
elasticsearch = "8.5.0-alpha.1"
serde_json = "1.0.107"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
retry = "2.0.0"
hostname = "0.3.1"
local-ip-address = "0.5.6"
clap_complete = "4.4.3"
regex = "1.9.6"
serde = "1.0.188"

[build-dependencies]
clap_mangen = "0.2.14"


[package.metadata.deb]
maintainer = "cargo-deb developers <cargo-deb@example.invalid>"
copyright = "2017, cargo-deb developers."
license-file = ["LICENSE", "2"]
extended-description = "example project for cargo-deb"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/sql_normalizer", "usr/bin/", "755"],
]
default-features = false
features = ["example_debian_build"]

[package.metadata.deb.variants.debug]
assets =  [
    ["target/release/sql_normalizer", "usr/bin/", "755"],
]

[features]
default = ["example_non_debian_build"]
example_non_debian_build = []
example_debian_build = []
