[package]
name = "sql_normalizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.39.0"
log = { version = "0.4.20", features = [] }
env_logger = "0.10.0"
clap = { version = "4.4.7", features = ["derive","env"] }
uuid = {version = "1.5.0", features = [ "v4", "serde" ]}
chrono = {version = "0.4.31", features = [  "serde" ]}
fs-tail = "0.1.4"
elasticsearch = "8.5.0-alpha.1"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
retry = "2.0.0"
hostname = "0.3.1"
local-ip-address = "0.5.6"
clap_complete = "4.4.4"
regex = "1.10.2"
serde = "1.0.189"
cargo-deb = { version = "2.0.0" }
openssl = { version = "0.10.35", features = ["vendored"] }